<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/please_complete_profile"
            android:gravity="center"
            android:fontFamily="@font/iran_sans"
            android:textSize="12sp"
            />





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/your_name"
                android:gravity="center"
                android:textColor="@color/blue"
                android:fontFamily="@font/iran_sans"
                android:textSize="16sp"
                />


                <EditText
                    android:id="@+id/et_name"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLength="255"
                    android:singleLine="true"

                    />

        </LinearLayout>

        <Button
            android:id="@+id/btn_next3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/iran_sans"
            android:background="@drawable/btn_success"
            android:textColor="@android:color/white"
             />

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
