<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"

        >
    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_user"
        android:tint="@color/colorIcon"
        android:layout_margin="5dp"
        />
    <TextView
        android:id="@+id/txt1"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/iran_sans"
        android:textColor="@color/colorIcon"
        android:paddingRight="10dp"
        android:text="@string/nav_account" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ededed"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"

        >
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_dl"
            android:tint="@color/colorIcon"

            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/tv_gallery_offline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans"
            android:textColor="@color/colorIcon"
            android:textSize="16sp"
            android:paddingRight="10dp"
            android:text="@string/nav_gallery" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ededed"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_upload"
            android:tint="@color/colorIcon"

            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/tv_render"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans"
            android:textColor="@color/colorIcon"
            android:textSize="16sp"
            android:paddingRight="10dp"
            android:text="@string/nav_up_render" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ededed"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_support"
            android:tint="@color/colorIcon"

            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/tv_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans"
            android:textColor="@color/colorIcon"
            android:textSize="16sp"
            android:paddingRight="10dp"
            android:text="@string/nav_support" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ededed"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_about"
            android:tint="@color/colorIcon"

            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans"
            android:textColor="@color/colorIcon"
            android:textSize="16sp"
            android:paddingRight="10dp"
            android:text="@string/nav_about_us" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ededed"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_job"
            android:tint="@color/colorIcon"

            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/tv_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans"
            android:textColor="@color/colorIcon"
            android:textSize="16sp"
            android:paddingRight="10dp"
            android:text="@string/nav_job" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ededed"
        />
 <LinearLayout
     android:id="@+id/ll_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_exit"
            android:tint="@color/colorIcon"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans"
            android:textColor="@color/colorIcon"
            android:textSize="16sp"
            android:paddingRight="10dp"
            android:text="@string/nav_logout" />

    </LinearLayout>




</LinearLayout>