<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/iran_sans"
                android:gravity="center"
                android:text="@string/please_complete_profile"
                android:textSize="12sp" />


            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/iran_sans"
                android:gravity="center"
                android:textColor="@color/blue"
                android:text="@string/your_pic"
                android:textSize="16sp" />


            <FrameLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    >


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@drawable/user_person"
                        app:civ_border_color="@android:color/black"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        app:civ_border_width="1dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="#000"
                        android:layout_alignParentBottom="true"
                        android:alpha="0.5"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:text="تغییر تصویر"

                        android:textColor="@android:color/white"
                        android:fontFamily="@font/iran_sans"
                        android:textSize="11sp"
                        />

                </RelativeLayout>

            </FrameLayout>

            <Button
                android:id="@+id/btn_next4"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_success"
                android:fontFamily="@font/iran_sans"
                android:text="@string/register_complete"
                android:textColor="@android:color/white" />

        </LinearLayout>
</RelativeLayout>
